--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 /* todo insteade of black #252525 */
-
+/* light #FE325B */
+/* bold #fc0939 */
+#customShadow{
+  box-shadow:
+  0.2px 1.2px 1.2px rgba(0, 0, 0, 0.015),
+  0.3px 2.7px 2.7px rgba(0, 0, 0, 0.022),
+  0.6px 4.5px 4.6px rgba(0, 0, 0, 0.027),
+  0.9px 6.9px 6.9px rgba(0, 0, 0, 0.031),
+  1.3px 9.9px 10px rgba(0, 0, 0, 0.035),
+  1.8px 14px 14.2px rgba(0, 0, 0, 0.039),
+  2.5px 19.9px 20.1px rgba(0, 0, 0, 0.043),
+  3.7px 28.8px 29.2px rgba(0, 0, 0, 0.048),
+  5.6px 44.4px 45px rgba(0, 0, 0, 0.055),
+  10px 79px 80px rgba(0, 0, 0, 0.07)
+;
+}
 #floating {
     animation-name: floating;
     animation-duration: 3s;
@@ -22,3 +37,26 @@
     }
   }
 
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
